// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User-Provider Render UserConext.Consumer should match the snaphot 1`] = `
ReactWrapper {
  "length": 1,
  Symbol(enzyme.__unrendered__): <Context.Consumer>
    [Function]
  </Context.Consumer>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__node__): Object {
    "instance": <p>
      a
    </p>,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": "a",
    },
    "ref": null,
    "rendered": Array [
      "a",
    ],
    "type": "p",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": <p>
        a
      </p>,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": "a",
      },
      "ref": null,
      "rendered": Array [
        "a",
      ],
      "type": "p",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`User-Provider Render UserWrapper matches the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <UserWrapper
    initialState={
      Object {
        "admin": false,
        "email": null,
        "firstname": null,
        "lastname": null,
        "userAccess": false,
        "username": null,
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": undefined,
      "value": Object {
        "admin": false,
        "checkResetCode": [Function],
        "email": null,
        "firstname": null,
        "forgotPassword": [Function],
        "getUser": [Function],
        "lastname": null,
        "login": [Function],
        "logout": [Function],
        "resetPassword": [Function],
        "signup": [Function],
        "updatePassword": [Function],
        "updateUser": [Function],
        "userAccess": false,
        "username": null,
      },
    },
    "ref": null,
    "rendered": null,
    "type": Object {
      "$$typeof": Symbol(react.provider),
      "_context": Object {
        "$$typeof": Symbol(react.context),
        "Consumer": [Circular],
        "Provider": [Circular],
        "_calculateChangedBits": null,
        "_changedBits": 0,
        "_changedBits2": 0,
        "_currentRenderer": null,
        "_currentRenderer2": null,
        "_currentValue": Object {
          "admin": false,
          "checkResetCode": [Function],
          "email": null,
          "firstname": null,
          "forgotPassword": [Function],
          "getUser": [Function],
          "lastname": null,
          "login": [Function],
          "logout": [Function],
          "resetPassword": [Function],
          "signup": [Function],
          "updatePassword": [Function],
          "updateUser": [Function],
          "userAccess": false,
          "username": null,
        },
        "_currentValue2": Object {
          "admin": false,
          "checkResetCode": [Function],
          "email": null,
          "firstname": null,
          "forgotPassword": [Function],
          "getUser": [Function],
          "lastname": null,
          "login": [Function],
          "logout": [Function],
          "resetPassword": [Function],
          "signup": [Function],
          "updatePassword": [Function],
          "updateUser": [Function],
          "userAccess": false,
          "username": null,
        },
        "_defaultValue": Object {
          "admin": false,
          "checkResetCode": [Function],
          "email": null,
          "firstname": null,
          "forgotPassword": [Function],
          "getUser": [Function],
          "lastname": null,
          "login": [Function],
          "logout": [Function],
          "resetPassword": [Function],
          "signup": [Function],
          "updatePassword": [Function],
          "updateUser": [Function],
          "userAccess": false,
          "username": null,
        },
      },
    },
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": undefined,
        "value": Object {
          "admin": false,
          "checkResetCode": [Function],
          "email": null,
          "firstname": null,
          "forgotPassword": [Function],
          "getUser": [Function],
          "lastname": null,
          "login": [Function],
          "logout": [Function],
          "resetPassword": [Function],
          "signup": [Function],
          "updatePassword": [Function],
          "updateUser": [Function],
          "userAccess": false,
          "username": null,
        },
      },
      "ref": null,
      "rendered": null,
      "type": Object {
        "$$typeof": Symbol(react.provider),
        "_context": Object {
          "$$typeof": Symbol(react.context),
          "Consumer": [Circular],
          "Provider": [Circular],
          "_calculateChangedBits": null,
          "_changedBits": 0,
          "_changedBits2": 0,
          "_currentRenderer": null,
          "_currentRenderer2": null,
          "_currentValue": Object {
            "admin": false,
            "checkResetCode": [Function],
            "email": null,
            "firstname": null,
            "forgotPassword": [Function],
            "getUser": [Function],
            "lastname": null,
            "login": [Function],
            "logout": [Function],
            "resetPassword": [Function],
            "signup": [Function],
            "updatePassword": [Function],
            "updateUser": [Function],
            "userAccess": false,
            "username": null,
          },
          "_currentValue2": Object {
            "admin": false,
            "checkResetCode": [Function],
            "email": null,
            "firstname": null,
            "forgotPassword": [Function],
            "getUser": [Function],
            "lastname": null,
            "login": [Function],
            "logout": [Function],
            "resetPassword": [Function],
            "signup": [Function],
            "updatePassword": [Function],
            "updateUser": [Function],
            "userAccess": false,
            "username": null,
          },
          "_defaultValue": Object {
            "admin": false,
            "checkResetCode": [Function],
            "email": null,
            "firstname": null,
            "forgotPassword": [Function],
            "getUser": [Function],
            "lastname": null,
            "login": [Function],
            "logout": [Function],
            "resetPassword": [Function],
            "signup": [Function],
            "updatePassword": [Function],
            "updateUser": [Function],
            "userAccess": false,
            "username": null,
          },
        },
      },
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`User-Provider Render userConsumer matches the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <UserConsumer />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": [Function],
    },
    "ref": null,
    "rendered": [Function],
    "type": Object {
      "$$typeof": Symbol(react.context),
      "Consumer": [Circular],
      "Provider": Object {
        "$$typeof": Symbol(react.provider),
        "_context": [Circular],
      },
      "_calculateChangedBits": null,
      "_changedBits": 0,
      "_changedBits2": 0,
      "_currentRenderer": Object {},
      "_currentRenderer2": null,
      "_currentValue": Object {
        "admin": false,
        "checkResetCode": [Function],
        "email": null,
        "firstname": null,
        "forgotPassword": [Function],
        "getUser": [Function],
        "lastname": null,
        "login": [Function],
        "logout": [Function],
        "resetPassword": [Function],
        "signup": [Function],
        "updatePassword": [Function],
        "updateUser": [Function],
        "userAccess": false,
        "username": null,
      },
      "_currentValue2": Object {
        "admin": false,
        "checkResetCode": [Function],
        "email": null,
        "firstname": null,
        "forgotPassword": [Function],
        "getUser": [Function],
        "lastname": null,
        "login": [Function],
        "logout": [Function],
        "resetPassword": [Function],
        "signup": [Function],
        "updatePassword": [Function],
        "updateUser": [Function],
        "userAccess": false,
        "username": null,
      },
      "_defaultValue": Object {
        "admin": false,
        "checkResetCode": [Function],
        "email": null,
        "firstname": null,
        "forgotPassword": [Function],
        "getUser": [Function],
        "lastname": null,
        "login": [Function],
        "logout": [Function],
        "resetPassword": [Function],
        "signup": [Function],
        "updatePassword": [Function],
        "updateUser": [Function],
        "userAccess": false,
        "username": null,
      },
    },
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": [Function],
      },
      "ref": null,
      "rendered": [Function],
      "type": Object {
        "$$typeof": Symbol(react.context),
        "Consumer": [Circular],
        "Provider": Object {
          "$$typeof": Symbol(react.provider),
          "_context": [Circular],
        },
        "_calculateChangedBits": null,
        "_changedBits": 0,
        "_changedBits2": 0,
        "_currentRenderer": Object {},
        "_currentRenderer2": null,
        "_currentValue": Object {
          "admin": false,
          "checkResetCode": [Function],
          "email": null,
          "firstname": null,
          "forgotPassword": [Function],
          "getUser": [Function],
          "lastname": null,
          "login": [Function],
          "logout": [Function],
          "resetPassword": [Function],
          "signup": [Function],
          "updatePassword": [Function],
          "updateUser": [Function],
          "userAccess": false,
          "username": null,
        },
        "_currentValue2": Object {
          "admin": false,
          "checkResetCode": [Function],
          "email": null,
          "firstname": null,
          "forgotPassword": [Function],
          "getUser": [Function],
          "lastname": null,
          "login": [Function],
          "logout": [Function],
          "resetPassword": [Function],
          "signup": [Function],
          "updatePassword": [Function],
          "updateUser": [Function],
          "userAccess": false,
          "username": null,
        },
        "_defaultValue": Object {
          "admin": false,
          "checkResetCode": [Function],
          "email": null,
          "firstname": null,
          "forgotPassword": [Function],
          "getUser": [Function],
          "lastname": null,
          "login": [Function],
          "logout": [Function],
          "resetPassword": [Function],
          "signup": [Function],
          "updatePassword": [Function],
          "updateUser": [Function],
          "userAccess": false,
          "username": null,
        },
      },
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`User-Provider Render userProvider matches the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <UserProvider />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <Elem />,
      "initialState": Object {
        "admin": false,
        "email": null,
        "firstname": null,
        "lastname": null,
        "userAccess": false,
        "username": null,
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {},
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Elem />,
        "initialState": Object {
          "admin": false,
          "email": null,
          "firstname": null,
          "lastname": null,
          "userAccess": false,
          "username": null,
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
